--- a/BDDNosql.html
+++ b/BDDNosql.html
@@ -72,7 +72,7 @@
                 <div class="wrapper2">
                    <div class="box-area">
                     <div class="box">
-                        <img src="images/sql.jpg" alt="">
+                        <img src="sql.jpg" alt="">
                         <div class="overlay">
                             <h3>Ventajas de las base de datos NoSQL</h3>
                             <p>Las aplicaciones que utilizan las base de datos SQL se enfrentan a distintas dificultades colocando de ejemplo al momento que las aplicaciones tienen que procesar una gran cantidad de datos de fuentes dispares ocasionando que encajen en el modelo relacional en consecuencia origina redundancia, duplicacion de datos y problemas en el rendimiento a escala. En cambio las bases de datos NoSQL son diseñandas para modelos de datos no Relacionales con esquemas flexibles que permitían la creación de aplicaciones modernas. Estos son los beneficios de las base de datos NoSQL.</p>
