--- a/BDDRelacionales.html
+++ b/BDDRelacionales.html
@@ -34,7 +34,7 @@
                 <div class="wrapper2">
                    <div class="box-area">
                     <div class="box">
-                        <img src="images/estructura.png" alt="">
+                        <img src="estructura.png" alt="">
                         <div class="overlay">
                             <h3>Que son
                                 las base de datos Relacionales</h3>
