--- a/BDDRelacionales.html
+++ b/BDDRelacionales.html
@@ -21,10 +21,13 @@
                 </div> 
             <ul>
               
-                <li><a href="index.html" class="link"><span>Inicio</span></a></li>
-                <li><a href="#" class="link"><span>Tipos</span></a></li>
-                <li><a href="#" class="link"><span>Contacto</span></a></li>
-                <li><a href="#" class="link"><span>Nosotros</span></a></li>
+               <li><a href="index.html" class="link"><span>Inicio</span></a></li>
+      <li><a href="#contacto" class="link"><span>Contacto</span></a></li>
+        <li><a href="#" class="link"><span>Nosotros</span></a></li>
+        <li><a href="BDDNosql.html" class="link"><span>NoSql</span></a></li>
+      <li><a href="BDDRelacionales.html" class="link"><span>Relacionales</span></a></li>
+        <li><a href="BDDPOO.html" class="link"><span>Orientada a Objetos</span></a></li>
+        <li><a href="BDDistribuidas.html" class="link"><span>Distribuidas</span></a></li>
                
             </ul>    
         </nav>  
